# template_full_stack

./: .gitignore  LICENSE  README.md  claude.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: auth_service.rs  db.rs  init.rs  main.rs  rbac_service.rs
backend/api/src/auth/: crypto.rs  jwt.rs  middleware.rs  mod.rs  rbac.rs
backend/api/src/routes/: mod.rs  organizations.rs  users.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs
backend/entity/src/entities/: invalid_jwt.rs  key.rs  mod.rs  organization.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_organization.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_key.rs  m20240101_000002_create_invalid_jwt.rs  m20240101_000003_create_user.rs  m20240101_000004_add_2fa_fields.rs  m20240101_000005_add_rbac_tables.rs
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/ui/field/: field-description.svelte  field-error.svelte  field-title.svelte
frontend/src/lib/services/: api-client.ts  auth.ts  settings.ts
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/src/routes/api/set-auth-cookie/: +server.ts
frontend/src/routes/change-password/: +page.svelte
frontend/src/routes/otp/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/signin/: +page.svelte
