[workspace]
members = ["api", "entity", "migration"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal
entity = { path = "entity" }
migration = { path = "migration" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.8"
http = "1"
hyper = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
jsonwebtoken = "9"
bcrypt = "0.15"
rsa = { version = "0.9", features = ["sha2"] }
totp-rs = { version = "5", features = ["qr", "otpauth"] }
aes-gcm = "0.10"
sha2 = "0.10"
cookie = "0.18"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
rand = "0.8"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
