[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Internal
entity = { workspace = true }
migration = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
http = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rsa = { workspace = true }
totp-rs = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
cookie = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
